// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput.vue is required prop should add asterik to the label text 1`] = `
<div
  class="text-input-label"
>
  
		some label *
	
</div>
`;

exports[`TextInput.vue is required prop should not add asterik to the label text 1`] = `
<div
  class="text-input-label"
>
  
		some label
	
</div>
`;

exports[`TextInput.vue messages should not show error message details if not error message is provided 1`] = `
<div
  class="text-input"
  id="unique-id"
>
  <div
    class="text-input-label"
  >
    
		some label
	
  </div>
   
  <div
    class="text-input-input-wrapper"
  >
    <input
      class=""
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`TextInput.vue messages should show error message details if both error message and details are provided 1`] = `
<div
  class="text-input"
  id="unique-id"
>
  <div
    class="text-input-label"
  >
    
		some label
	
  </div>
   
  <div
    class="text-input-input-wrapper"
  >
    <input
      class="text-input-error"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
   
  <div>
    <div>
      <div
        class="text-input-error-message"
      >
        some error message
      </div>
       
      <div
        class="v-popper v-popper--theme-nc-popover-8"
      >
        <a
          class="link"
          href="#"
        >
          Details
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput.vue messages should show error message if both error message and hint text are provided 1`] = `
<div
  class="text-input"
  id="unique-id"
>
  <div
    class="text-input-label"
  >
    
		some label
	
  </div>
   
  <div
    class="text-input-input-wrapper"
  >
    <input
      class="text-input-error"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
   
  <div>
    <div>
      <div
        class="text-input-error-message"
      >
        some error message
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`TextInput.vue messages should show error message if provided 1`] = `
<div
  class="text-input"
  id="unique-id"
>
  <div
    class="text-input-label"
  >
    
		some label
	
  </div>
   
  <div
    class="text-input-input-wrapper"
  >
    <input
      class="text-input-error"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
   
  <div>
    <div>
      <div
        class="text-input-error-message"
      >
        some error message
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`TextInput.vue messages should show hint text if provided 1`] = `
<div
  class="text-input"
  id="unique-id"
>
  <div
    class="text-input-label"
  >
    
		some label
	
  </div>
   
  <div
    class="text-input-input-wrapper"
  >
    <input
      class=""
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
   
  <div>
    <div
      class="text-input-hint"
    >
      some hint message
    </div>
  </div>
</div>
`;

exports[`TextInput.vue readonly prop should set the input to readonly 1`] = `
<div
  class="text-input"
  id="unique-id"
>
  <div
    class="text-input-label"
  >
    
		some label
	
  </div>
   
  <div
    class="text-input-input-wrapper"
  >
    <input
      class="text-input-readonly"
      placeholder=""
      readonly="readonly"
      type="text"
    />
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`TextInput.vue with copy button prop should render copy button if set 1`] = `
<div
  class="text-input"
  id="unique-id"
>
  <div
    class="text-input-label"
  >
    
		some label
	
  </div>
   
  <div
    class="text-input-input-wrapper"
  >
    <input
      class=""
      placeholder=""
      type="text"
    />
     
    <button
      class="text-input-copy-value button-vue button-vue--size-normal button-vue--icon-and-text button-vue--vue-secondary"
      data-v-ce3a06f2=""
      disabled="disabled"
      title="Copy value"
      type="button"
    >
      <span
        class="button-vue__wrapper"
        data-v-ce3a06f2=""
      >
        <span
          aria-hidden="true"
          class="button-vue__icon"
          data-v-ce3a06f2=""
        >
          <span
            aria-hidden="true"
            aria-label=""
            class="material-design-icon clippy-icon"
            data-v-ce3a06f2=""
            role="img"
          >
            <svg
              enable-background="new 0 0 16 16"
              fill="currentColor"
              height="16"
              version="1.1"
              viewBox="0 0 16 16"
              width="16"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m13 15h-11l0.0005-10h11v3.0002l1-0.0004 0.0005-5.0001c0.000058-0.5834-0.4165-1.0002-1.0005-1.0001l-3.467 0.0005c0.0008-1.183-0.9492-2.0001-2.1325-2.0001s-2.1333 0.8171-2.1333 2.0004h-3.2c-0.5834 0-1.0662 0.4166-1.0662 0.9999l-0.0005 12c-0.0000243 0.584 0.4833 1 1.0667 1l10.933-0.0005c0.584-0.001 1-0.416 1-1v-3h-1zm-8.8005-12h1.0672c0.5833 0 1.0666-0.4162 1.0666-0.9996 0-0.5833 0.4834-0.9337 1.0667-0.9337s1.0667 0.3504 1.0667 0.9337c0 0.5834 0.5333 0.9996 1.0666 0.9996h1.2667c0.517 0 1.2 0.4166 1.2 1h-9c-0.0004-0.65 0.5988-1 1.1988-1zm-1.1995 8h2v-1h-2zm7.9998-2v-2l-4 3 3.9998 3v-2l5.0002-0.00005v-2l-4.9998-0.00005zm-8 4h4v-1h-4zm6-7h-6v1h6zm-3 2h-3v1h3z"
              />
            </svg>
          </span>
        </span>
        <span
          class="button-vue__text"
          data-v-ce3a06f2=""
        >
          
			Copy value
		
        </span>
      </span>
    </button>
  </div>
   
  <!---->
</div>
`;
